--- a/index.css
+++ b/index.css
@@ -14,13 +14,16 @@ body {
 }
 
 .navbar {
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     padding: 15px;
     background-color: rgba(0, 0, 0, 0.5);
-    padding: 15px;
+    
     width: 100%;
     box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: right;
+    
+    
     
 }
 
@@ -30,11 +33,15 @@ body {
     margin-right: 15px;
     font-family: Lato-Bold;
     font-size: 20px;
+}   
+
+.pipi {
+    display: flex;
+    justify-content: left;
+    width: 100px;
+    height: 50px;  
 }
-.navbar img {
-  width: 100px;
-  height: 50px;  
-}
+
 
 
 .content {
@@ -68,7 +75,7 @@ body {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.5);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -91,3 +98,4 @@ body {
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
