--- a/Michael.css
+++ b/Michael.css
@@ -155,5 +155,5 @@ h1, h2, h3, p, ul {
     background-color: red; /* Rode button = Voor videos */
 }
 .button2 {
-    background-color: darkred; /* Donker rode button = Voor fotos */
+    background-color: #D2042D; /* Donker rode button = Voor fotos */
 }
