--- a/Michael.css
+++ b/Michael.css
@@ -1,4 +1,7 @@
-
+A:link {color: white ; text-decoration: none}
+A:active {color: black ; text-decoration: none}
+A:visited {color: white ; text-decoration: none}
+A:hover {color: red; text-decoration: none}
 .h1-bg {
     color: red;
     padding: 5px;
@@ -126,6 +129,7 @@ h1, h2, h3, p, ul {
     color: red;
     padding:0px; 
     margin:0px;
+    text-align: center;
   }
   table {
     border-collapse: collapse;
@@ -156,4 +160,7 @@ h1, h2, h3, p, ul {
 }
 .button2 {
     background-color: #D2042D; /* Donker rode button = Voor fotos */
+}
+#Kika p {
+    color:white;
 }
