--- a/yvan.css
+++ b/yvan.css
@@ -137,3 +137,24 @@ button {
     margin: 5px;
     cursor: pointer;
 }
+#gameContainer{
+    text-align: center;
+    background: #212837;
+}
+#gameBoard{
+    border: 3px solid;
+    
+}
+#scoreText{
+    font-family: "Permanent Marker", cursive;
+    font-size: 50px;
+}
+#resetBtn{
+    font-family: "Permanent Marker", cursive;
+    font-size: 22px;
+    width: 100px;
+    height: 50px;
+    border: 4px solid;
+    border-radius: 15px;
+    cursor: pointer;
+}
