--- a/Wumpus.css
+++ b/Wumpus.css
@@ -62,7 +62,7 @@ button {
 }
 
 .navbar a {
-  color: #AA0000;
+  color: white;
   text-decoration: solid;
   margin-right: 15px;
   font-family: Lato-Bold;
@@ -80,7 +80,7 @@ button {
   flex: 1;
   text-align: center;
   padding: 50px;
-  color: #ff1919;
+  color: white;
   background-color: rgba(0, 0, 0, 0.5);
   width: 400px;
   height: auto;
@@ -93,7 +93,7 @@ button {
 }
 
 .dropbtn {
-  color: #AA0000;
+  color: white;
   text-decoration: none;
   background-color: transparent;
   border: none;
@@ -113,7 +113,7 @@ button {
 }
 
 .dropdown-content a {
-  color: #AA0000;
+  color: white;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -133,7 +133,7 @@ h1, h2, h3, p, ul {
   text-align: center; 
 }
 p {
-  color: red;
+  color: white;
   padding:0px; 
   margin:0px;
   text-align: center;
