--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ body {
     background-size: cover;
     background-position: center;
     height: 100vh;
+    color: white;
 }
 
 .navbar {
@@ -28,7 +29,7 @@ body {
 }
 
 .navbar a {
-    color: #AA0000;
+    color: white;
     text-decoration: solid;
     margin-right: 15px;
     font-family: Lato-Bold;
@@ -48,7 +49,7 @@ body {
     flex: 1;
     text-align: center;
     padding: 50px;
-    color: #ff1919;
+    color: white;
     background-color: rgba(0, 0, 0, 0.5);
     width: 400px;
     height: auto;
@@ -61,7 +62,7 @@ body {
 }
 
 .dropbtn {
-    color: #AA0000;
+    color: white;
     text-decoration: none;
     background-color: transparent;
     border: none;
@@ -82,7 +83,7 @@ body {
 }
 
 .dropdown-content a {
-    color: #AA0000;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
