--- a/milan.css
+++ b/milan.css
@@ -103,7 +103,7 @@ body {
     flex: 1;
     text-align: center;
     padding: 50px;
-    color: #ff1919;
+    color: white;
     background-color: rgba(0, 0, 0, 0.5);
     width: 400px;
     height: auto;
@@ -116,7 +116,7 @@ body {
 }
 
 .dropbtn {
-    color: #AA0000;
+    color: white;
     text-decoration: none;
     background-color: transparent;
     border: none;
@@ -137,7 +137,7 @@ body {
 }
 
 .dropdown-content a {
-    color: #AA0000;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
