--- a/yvan.css
+++ b/yvan.css
@@ -26,7 +26,7 @@ body {
     height: 100vh;
     color: white;
 }
-.levelcontainer {
+.gamemodecontainer {
     border: 5px solid #000; 
     padding: 10px;        
     margin-top: 70px;      
@@ -172,6 +172,7 @@ button:hover {
 }
 #gameBoard{
     border: 3px solid;
+    color: red;
     
 }
 #scoreText{
